Fix header overflow issue.

--- a/css/reception/project-header.less
+++ b/css/reception/project-header.less
@@ -13,7 +13,6 @@
         width: 100%;
         max-width: 1200px;
         text-align: center;
-        word-break: keep-all;
         h2.project-title { margin-top: 1.5em; }
         h5.project-subtitle { font-weight: 200; }
     }
